# worklabs

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  quick-add.html  vite.config.js
.githooks/: pre-commit
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/main/: App.jsx  LapModal.jsx  LogModal.jsx  Timeline.jsx  main.jsx  useCustomTags.js  useLaps.js
src/quick-add/: QuickAdd.jsx  main.jsx
src/shared/: TagPicker.jsx  constants.js  global.css  tauri.js  utils.js
