[package]
name = "worklaps"
version = "0.1.0"
description = "WorkLaps — 하루를 랩으로 기록하다"
authors = []
edition = "2021"

[lib]
name = "worklaps_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
